[gd_scene load_steps=5 format=3 uid="uid://by4p50alagke4"]

[ext_resource type="Script" path="res://scenes/catm.gd" id="1_q0tcj"]
[ext_resource type="Resource" uid="uid://cpndwe3tdqhhq" path="res://scenes/supp/CharacterClass.tres" id="2_ow0t7"]
[ext_resource type="SpriteFrames" uid="uid://d4lt1injqnnr0" path="res://assets/RES/cat.tres" id="2_tr3bt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t73xm"]
size = Vector2(32, 32)

[node name="Cat" type="CharacterBody2D"]
light_mask = 2
visibility_layer = 3
input_pickable = true
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_q0tcj")
stats = ExtResource("2_ow0t7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_t73xm")

[node name="PopupMenu" type="PopupMenu" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(7, -12)
scale = Vector2(1.167, 1.167)
sprite_frames = ExtResource("2_tr3bt")
animation = &"IdleDarkBlue"
autoplay = "IdleDarkBlue"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 1.0
target_desired_distance = 1.0
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(0, 1, 0, 1)

[connection signal="input_event" from="." to="." method="input_event"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_popup_menu_id_pressed"]
[connection signal="index_pressed" from="PopupMenu" to="." method="_on_popup_menu_index_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="navigation_finished" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_navigation_finished"]
